<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.clever-cloud</groupId>
  <artifactId>biscuit-pulsar</artifactId>
  <packaging>jar</packaging>
  <name>biscuit-pulsar</name>
  <version>2.4.0-SNAPSHOT</version>
  <url>https://github.com/clevercloud/biscuit-pulsar</url>

  <description>Biscuit authentication/authorization plugins for Apache Pulsar</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.target>11</maven.compiler.target>
    <maven.compiler.source>11</maven.compiler.source>

    <!-- plugins -->
    <maven-gpg.version>1.6</maven-gpg.version>
    <maven-source.version>2.2.1</maven-source.version>
    <maven-javadoc.version>2.9.1</maven-javadoc.version>
    <nexus-staging-maven.version>1.6.7</nexus-staging-maven.version>

    <!-- dependencies -->
    <biscuit-java.version>1.1.4</biscuit-java.version>
    <logback-classic.version>1.2.10</logback-classic.version>
    <protobuf.version>3.16.1</protobuf.version>
    <pulsar.version>2.9.1</pulsar.version>
    <slf4j-api.version>1.7.32</slf4j-api.version>
    <vavr.version>0.10.2</vavr.version>

    <!-- test dependencies -->
    <assertj-core.version>3.14.0</assertj-core.version>
    <junit.version>4.13.1</junit.version>
  </properties>

  <licenses>
    <license>
      <name>The Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Alexandre DUVAL</name>
      <email>alexandre.duval@clever-cloud.com</email>
      <organization>Clever Cloud</organization>
      <organizationUrl>https://clever-cloud.com</organizationUrl>
    </developer>
    <developer>
      <name>Geoffroy COUPRIE</name>
      <email>geoffroy.couprie@clever-cloud.com</email>
      <organization>Clever Cloud</organization>
      <organizationUrl>https://clever-cloud.com</organizationUrl>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:https://git@github.com/clevercloud/biscuit-pulsar.git</connection>
    <developerConnection>scm:git:git@github.com:clevercloud/biscuit-pulsar.git</developerConnection>
    <url>git@github.com:clevercloud/biscuit-pulsar.git</url>
  </scm>

  <distributionManagement>
    <repository>
      <id>ossrh</id>
      <name>Central Repository OSSRH</name>
      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <repositories>
    <repository>
      <id>repository.apache.org-snapshot</id>
      <url>https://repository.apache.org/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <profiles>
    <profile>
      <id>deploy</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <gpgArguments>
                <arg>--pinentry-mode</arg>
                <arg>loopback</arg>
              </gpgArguments>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>${nexus-staging-maven.version}</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>ossrh</serverId>
          <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
          <autoReleaseAfterClose>true</autoReleaseAfterClose>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>${maven-source.version}</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven-javadoc.version}</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <additionalparam>-Xdoclint:none</additionalparam>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>com.google.protobuf</groupId>
      <artifactId>protobuf-java</artifactId>
      <version>${protobuf.version}</version>
    </dependency>
    <dependency>
      <groupId>com.clever-cloud</groupId>
      <artifactId>biscuit-java</artifactId>
      <version>${biscuit-java.version}</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>io.vavr</groupId>
      <artifactId>vavr</artifactId>
      <version>${vavr.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.pulsar</groupId>
      <artifactId>pulsar-client</artifactId>
      <version>${pulsar.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.pulsar</groupId>
      <artifactId>pulsar-broker</artifactId>
      <version>${pulsar.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.pulsar</groupId>
      <artifactId>pulsar-common</artifactId>
      <version>${pulsar.version}</version>
      <exclusions>
        <exclusion>
          <groupId>io.grpc</groupId>
          <artifactId>grpc-all</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j-api.version}</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback-classic.version}</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj-core.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
